# django-2-arystambek-dimash

./: db.sqlite3  pyproject.toml
app/: settings.py  urls.py
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_comment_created_at_news_created_at.py  0003_alter_comment_created_at_alter_news_created_at.py  0004_alter_comment_created_at_alter_news_created_at.py  0005_alter_comment_created_at_alter_news_created_at.py  0006_comment_author_news_author.py  0007_alter_comment_author_alter_news_author.py  0008_alter_comment_author_alter_news_author.py
news/static/news/: style.css
news/templates/: base.html
news/templates/news/: change.html  detail.html  home.html  news.html  post.html
news/templates/registration/: login.html  signup.html
