[tool.poetry]
name = "django-2-arystambek-dimash"
version = "0.1.0"
description = ""
authors = ["dinmukhammed <arystambekdimash005@gmail.com>"]
readme = "README.md"
packages = [{include = "django_2_arystambek_dimash"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-debug-toolbar = "^4.2.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
